2007-01-09  Sven Neumann  <sven@gimp.org>

	* HACKING
	* tools/pdbgen/lib.pl
	* tools/pdbgen/app.pl: fixed spelling of "auto-generated".

	* tools/pdbgen/pdb/color.pdb
	* tools/pdbgen/pdb/brush_select.pdb
	* tools/pdbgen/pdb/palette_select.pdb
	* tools/pdbgen/pdb/font_select.pdb
	* tools/pdbgen/pdb/procedural_db.pdb
	* tools/pdbgen/pdb/pattern_select.pdb
	* tools/pdbgen/pdb/drawable.pdb
	* tools/pdbgen/pdb/gradient_select.pdb: improved wording and fixed
	spelling errors.
	
	* libgimp/gimp.c: fixed spelling errors.

	* app/pdb/*.h: 
	* libgimp/gimp*_pdb.[ch]: regenerated.

2007-01-08  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.c: increased statusbar message timeout
	to 5 seconds.

2007-01-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/difference-clouds.scm: removed wrong
	and useless call to gimp-drawable-update.

	* plug-ins/script-fu/scripts/drop-shadow.scm: removed hyphen from
	menu entry and description.

2007-01-08  Marco Ciampa  <ciampix@libero.it>

	* configure.in: Added 'eo' (Esperanto) to ALL_LINGUAS

2007-01-07  Michael Natterer  <mitch@gimp.org>

	* modules/controller_linux_input.c (rel_events): add more relative
	events.

2007-01-05  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpbrushselectbutton.c: reverted the change for bug
	#356901 and instead applied a patch from Kyoichiro Suda that's
	actually a better fix and also plugs a memleak (see bug #393158).

2007-01-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/bmp/bmpread.c (ReadImage): applied patch from Aurimas
	Juška. Use the alpha channel if and only if a bitmap contains at
	least one non-zero value. Fixes bug #352262.

2007-01-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/nova.c: minor code cleanup. Changed mnemonic of
	the menu entry.

2007-01-04  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/script-fu/scripts/old-photo.scm: fixed crash when
	Mottle option is selected (mLayer was incorrectly declared).

2007-01-04  Sven Neumann  <sven@gimp.org>
